2007-06-27  Alex Roitman  <shura@gramps-project.org>
	* src/BasicUtils/Makefile.am: Use new filenames.
	* src/images/scalable/Makefile.am: Ship gramps-viewmedia.svg
	* src/TreeViews/_PersonTreeView.py: Use name_displayer.
	* src/ReportBase/_ReportUtils.py: Use name_displayer.
	* src/ReportBase/_CommandLineReport.py: Use name_displayer.
	* src/ReportBase/_BareReportDialog.py: Use name_displayer.
	* src/PluginUtils/_Tool.py: Use name_displayer.
	* src/plugins/TimeLine.py: Use name_displayer.
	* src/plugins/RelCalc.py: Use name_displayer.
	* src/plugins/ReadGrdb.py: Use name_displayer.
	* src/plugins/NarrativeWeb.py: Use name_displayer.
	* src/plugins/IndivComplete.py: Use name_displayer.
	* src/plugins/GraphViz.py: Use name_displayer.
	* src/plugins/FindDupes.py: Use name_displayer.
	* src/plugins/FamilyGroup.py: Use name_displayer.
	* src/plugins/DetDescendantReport.py: Use name_displayer.
	* src/plugins/DetAncestralReport.py: Use name_displayer.
	* src/plugins/DesGraph.py: Use name_displayer.
	* src/plugins/DescendReport.py: Use name_displayer.
	* src/plugins/DescendChart.py: Use name_displayer.
	* src/plugins/Check.py: Use name_displayer.
	* src/plugins/Ancestors.py: Use name_displayer.
	* src/plugins/AncestorReport.py: Use name_displayer.
	* src/plugins/AncestorChart2.py: Use name_displayer.
	* src/ObjectSelector/_PersonTreeFrame.py: Use name_displayer.
	* src/ObjectSelector/_PersonFrame.py: Use name_displayer.
	* src/Merge/_MergePerson.py: Use name_displayer.
	* src/GrampsDbUtils/_WriteGedcom.py: Use name_displayer.
	* src/GrampsDbUtils/_ReadXML.py: Use name_displayer.
	* src/GrampsDbUtils/_GedcomParse.py: Use name_displayer.
	* src/FilterEditor/_ShowResults.py: Use name_displayer.
	* src/FilterEditor/_EditRule.py: Use name_displayer.
	* src/Editors/_EditPrimary.py: Use name_displayer.
	* src/Editors/_EditPersonRef.py: Use name_displayer.
	* src/Editors/_EditPerson.py: Use name_displayer.
	* src/Editors/_EditName.py: Use name_displayer.